# bamot

./: .coverage  .gitignore  .gitmodules  .pylintrc  README.md  basic.py  compare_results.py  create_pseudo_stereo_detections.py  create_video.py  evaluate_all_trajectories.sh  evaluate_trajectories.py  full_evaluation.py  matrix_search.sh  play_kitti_scene.py  plot_gt_trajs.py  preprocess_kitti_groundtruth.py  preprocess_superpoints.py  pyproject.toml  requirements.txt  run_all_scenes.sh  run_disparity.py  run_kitti_gt_mot.py  run_kitti_test_mot.py  run_kitti_train_mot.py  run_line_search.sh  run_line_search_for_const_motion_weight.sh  run_multiple_scenes.sh  setup.cfg  train.py
bamot/: __init__.py  config.py
bamot/core/: base_types.py  base_types.py~  disparity.py  mot.py  optimization.py  preprocessing.py  preprocessing.py~  test_optimization.py  test_preprocessing.py~
bamot/core/tests/: test_preprocessing.py  test_preprocessing.py~
bamot/obbox_regressor/: dataloader.py  generate_fake_data.py  model.py  train.py
bamot/util/: cv.py  kitti.py  misc.py  viewer.py
configs/: config-best.yaml
detections/testing/image_02/: 0000.txt  0001.txt  (+27 more)
scripts/: create_video.py  evaluate_trajectories.py  play_kitti_scene.py  plot_diff_vals.py  plot_gt_trajs.py  preprocess_superpoints.py  run_all_scenes_disparity.sh  run_multiple_scenes.sh  run_multiple_scenes_2.sh
thesis/: .gitignore  bamot.bib  myglossaries.tex  settings.tex  thesis.org  thesis.tex
thesis/figures/: ba_objects.io
thesis/pages/: abstract.tex  acknowledgments.tex  cover 3.tex  disclaimer.tex  title.tex
(+169 files in other folders)
